Added feature diagnostic
